<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_phar">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.locatorproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_health"
        android:name="com.example.locatorproject.BlankFragment"
        android:label="Hospital"
        tools:layout="@layout/fragment_blank" />


    <fragment
        android:id="@+id/nav_res"
        android:name="com.example.locatorproject.RestaurantFragment"
        android:label="Restaurant"
        tools:layout="@layout/fragment_restaurant_list" />


    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.locatorproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.locatorproject.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.locatorproject.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.locatorproject.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_phar"
        android:name="com.example.locatorproject.PharmacieFragment"
        android:label="Pharmacie"
        tools:layout="@layout/fragment_pharmacie_list2" />
</navigation>